# liquormarketingagent

./: .gitignore  APP_READY.md  BUILD_SUMMARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  start-app.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251022_1021-f5ba0344c43c_initial_schema_users_and_customers.py
backend/scripts/: import_sample_customers.py
backend/src/liquor_agent/: __init__.py  llm_openai.py
backend/src/liquor_agent/api/: deps.py  main.py
backend/src/liquor_agent/api/v1/: actions.py  auth.py  campaigns.py  customers.py
backend/src/liquor_agent/core/: config.py  database.py  security.py
backend/src/liquor_agent/models/: __init__.py  base.py  customer.py  user.py
backend/src/liquor_agent/schemas/: __init__.py  common.py  customer.py  user.py
backend/src/liquor_agent/services/: __init__.py  campaign_planning.py  customer_scoring.py
backend/src/liquor_agent/workers/: __init__.py  celery_app.py  tasks.py
docker/: .dockerignore  Dockerfile
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  DEPLOY_GITHUB.md  FRONTEND_BACKEND_PLAN.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  PLANNING_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  TWO_AGENT_CONTRACT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/features/analytics/pages/: AnalyticsPage.tsx
frontend/src/features/auth/pages/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/campaigns/pages/: CampaignsListPage.tsx
frontend/src/features/customers/pages/: CustomerDetailPage.tsx  CustomersListPage.tsx
frontend/src/features/dashboard/pages/: DashboardPage.tsx
frontend/src/features/settings/pages/: SettingsPage.tsx
frontend/src/lib/: api-client.ts
frontend/src/services/: auth.service.ts
frontend/src/stores/: auth.store.ts
sample_data/: agent_knowledge_base.json  segment_playbooks.json
scripts/: push_with_gh.sh  push_with_pat.sh
src/liquor_agent/: __init__.py  config.py  dataio.py  llm_openai.py  orchestrator.py  pusher.py  sender.py  sender.py.bak_fix  subagent.py
src/liquor_marketing_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_subagent.py
